src/objects/Customer_Document__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Ticket related to Customer Document</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard PO</fullName>
                </value>
                <value>
                    <fullName>Risk Order</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>In-House Order</fullName>
                </value>
                <value>
                    <fullName>Customer Price List</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                    <isActive>false</isActive>
                    <label>Agreement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Free text field to store (additional) comments</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_commercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact (commercial)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact (delivery)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Documents (Customer Contact (delivery))</relationshipLabel>
        <relationshipName>Customer_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Delivery_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Delivery Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Document_Date__c</fullName>
        <description>Customer document date provided by customer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Document_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Document_Id_Link__c</fullName>
        <description>Link to Customer Document record using Customer Document ID</description>
        <formula>IF(
NOT(ISBLANK(Customer_Document_ID__c)),
HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id), Customer_Document_ID__c,&quot;_self&quot;),
HYPERLINK(&quot;N/A&quot;, Customer_Document_ID__c,&quot;_self&quot;)
)</formula>
        <label>Customer Document ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoicing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Invoicing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS_Staging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Staging record containing information of the CPO received in JSON via API.</description>
        <inlineHelpText>Staging record of the incoming JSON</inlineHelpText>
        <label>CPO Staging</label>
        <referenceTo>DS_Staging__c</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INCO_Terms__c</fullName>
        <label>INCO Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXW (Ex Works)</fullName>
                </value>
                <value>
                    <fullName>FCA (Free Carrier)</fullName>
                </value>
                <value>
                    <fullName>CPT (Carriage Paid To)</fullName>
                </value>
                <value>
                    <fullName>CIP (Carriage and Insurance Paid to)</fullName>
                </value>
                <value>
                    <fullName>DAT (Delivered At Terminal)</fullName>
                </value>
                <value>
                    <fullName>DAP (Delivered At Place)</fullName>
                </value>
                <value>
                    <fullName>DDP (Delivered Duty Paid)</fullName>
                </value>
                <value>
                    <fullName>FAS (Free Alongside Ship)</fullName>
                </value>
                <value>
                    <fullName>FOB (Free on Board)</fullName>
                </value>
                <value>
                    <fullName>CFR (Cost and Freight)</fullName>
                </value>
                <value>
                    <fullName>CIF (Cost, Insurance &amp; Freight)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matches_Quotes__c</fullName>
        <description>if the information in CDR matches with Quote</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Matches Quote(s)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_term__c</fullName>
        <label>Modification term</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None (empty)</fullName>
                    <default>true</default>
                    <label>None (empty)</label>
                </value>
                <value>
                    <fullName>Change Contractual Allowed</fullName>
                </value>
                <value>
                    <fullName>Change Allowed</fullName>
                </value>
                <value>
                    <fullName>Change Refused</fullName>
                </value>
                <value>
                    <fullName>Cancellation Contractual Allowed</fullName>
                </value>
                <value>
                    <fullName>Cancellation Allowed</fullName>
                </value>
                <value>
                    <fullName>Cancellation Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nokia_Document_Receipt_Date__c</fullName>
        <description>Date when the document is received in Nokia premises</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Document Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nokia_Legal_Entity_Account_Number__c</fullName>
        <formula>Nokia_Legal_Entity_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nokia Legal Entity Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Legal_Entity_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nokia Legal Entity Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Documents (Nokia Legal Entity)</relationshipLabel>
        <relationshipName>Customer_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nokia_Legal_Entity_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Legal Entity Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Legal_entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Legal entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_Association_comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Association comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTO_Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Contract_Reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Contract Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Account_Number__c</fullName>
        <formula>Customer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Contact_Commercial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Contact Commercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Contact_Delivery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Contact Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Document_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Document Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Document_Link__c</fullName>
        <formula>IF(
NOT(ISBLANK(QTO_File_Reference__c)),
HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;QTO_File_Reference__c, &quot;PDF Link&quot;,&quot;_blank&quot;),
null
)</formula>
        <label>PDF Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Document_URL__c</fullName>
        <formula>IF(
 NOT(ISBLANK(QTO_File_Reference__c)),
 LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;servlet/servlet.FileDownload?file=&apos;+QTO_File_Reference__c,
 null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Document URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTO_External_Contract_reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Contract reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_External_Contractquoteoffer_ref__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Contract quote/offer reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_File_Reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF File Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_INCO_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF INCO Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_InAssociationProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when Association in progress</description>
        <label>QTO_InAssociationProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QTO_Line_Iteam_Association_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Association Comment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Association__c</fullName>
        <formula>IF( QTO_Line_Iteam_Association_Comment__c = &apos;Successful&apos;,IMAGE(&quot;/resource/Correct&quot;, &quot;Yes&quot;),IF(QTO_Line_Iteam_Association_Comment__c = &apos;Failed&apos;,IMAGE(&quot;/resource/Wrong&quot;, &quot;No&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Association</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Match__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Matching_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Matching Comment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Matching__c</fullName>
        <formula>IF( QTO_Line_Item_Matching_Comment__c = &apos;Successful&apos;,IMAGE(&quot;/resource/Correct&quot;, &quot;Yes&quot;),IF(QTO_Line_Item_Matching_Comment__c = &apos;Failed&apos;,IMAGE(&quot;/resource/Wrong&quot;, &quot;No&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Matching</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Match_comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Match comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTO_Nature__c</fullName>
        <label>Nature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Copy</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_Nokia_Legal_Entity_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Nokia Legal Entity Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Nokia_Legal_Entity_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Nokia Legal Entity Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Nokia_Legal_Entity_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Nokia Legal Entity Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_OfferingType__c</fullName>
        <label>Offering Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_PDF_Customer_Name__c</fullName>
        <description>Customer name retrieved from the pdf</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_PDF_Nature__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Nature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_PDF_Place_of_Delivery_Shipment__c</fullName>
        <description>Landing place for Place of Delivery/Shipment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Place of Delivery/Shipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_PDF_Requested_Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Requested Delivery Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_PDF_Total_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Total Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Payment_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Sub_Classification__c</fullName>
        <description>Sub Classification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Sub Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_T_C_Match__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>T&amp;C Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Tax_Id_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Id Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>Delivery date requested by the customer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Registration</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Closed-validated</fullName>
                </value>
                <value>
                    <fullName>Closed-cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed-consumed</fullName>
                </value>
                <value>
                    <fullName>Closed-rejected</fullName>
                </value>
                <value>
                    <fullName>Ready for hand-off to Legacy</fullName>
                </value>
                <value>
                    <fullName>Taken for hand-off to Legacy</fullName>
                </value>
                <value>
                    <fullName>Hand-off to Legacy completed</fullName>
                </value>
                <value>
                    <fullName>Draft with Exceptions</fullName>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Exception-Association</fullName>
                </value>
                <value>
                    <fullName>Exception-Header-Mismatch</fullName>
                </value>
                <value>
                    <fullName>Exception-Data-Enrichment</fullName>
                </value>
                <value>
                    <fullName>Wait for approval</fullName>
                </value>
                <value>
                    <fullName>Modification Term Set</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Commercially Enriched</fullName>
                </value>
                <value>
                    <fullName>Modification Term Determined</fullName>
                </value>
                <value>
                    <fullName>Ready for line item hand-off</fullName>
                </value>
                <value>
                    <fullName>Enriched(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Enrichment(Lines)</fullName>
                </value>
                <value>
                    <fullName>Associated(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Association(Lines)</fullName>
                </value>
                <value>
                    <fullName>Matched(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Matching(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Matching</fullName>
                </value>
                <value>
                    <fullName>Manually-Enriched(Lines)</fullName>
                </value>
                <value>
                    <fullName>Closed-Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Classification__c</fullName>
        <label>Sub Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classification__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Umbrella (Offer Based)</fullName>
                </value>
                <value>
                    <fullName>Quote-based</fullName>
                </value>
                <value>
                    <fullName>Legacy Based</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Blanket</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Risk-Order</fullName>
                </value>
                <value>
                    <fullName>Engineering Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version_Nr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Nr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Associated</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Associated</value>
        </filters>
        <label>All - Associated</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_validated</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed-validated</value>
        </filters>
        <label>All - Closed-validated</label>
    </listViews>
    <listViews>
        <fullName>All_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Customer_Document_Id_Link__c</columns>
        <columns>QTO_Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Classification__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>Customer__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Draft with Exceptions,Exception-Association,Exception-Header-Mismatch,Exception-Data-Enrichment,Exception-Enrichment(Lines),Exception-Association(Lines),Exception-Matching(Lines),Exception-Matching</value>
        </filters>
        <filters>
            <field>Sub_Classification__c</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filters>
        <label>All - Exceptions</label>
    </listViews>
    <listViews>
        <fullName>All_In_Registration</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Registration</value>
        </filters>
        <label>All - In Registration</label>
    </listViews>
    <listViews>
        <fullName>All_Ready_Taken</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for hand-off to Legacy,Taken for hand-off to Legacy</value>
        </filters>
        <label>All - Ready &amp; Taken</label>
    </listViews>
    <listViews>
        <fullName>All_Ready_for_CPO_creation</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for CPO creation</value>
        </filters>
        <label>All - Ready for CPO creation</label>
    </listViews>
    <listViews>
        <fullName>All_Registered</fullName>
        <columns>NAME</columns>
        <columns>Customer_Document_ID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Nokia_Legal_entity__c</columns>
        <columns>QTO_Customer_Postal_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Classification__c</columns>
        <columns>QTO_Nokia_Legal_Entity_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </filters>
        <label>All - Registered</label>
    </listViews>
</CustomObject>